@@ -1,6 +1,6 @@
 Package: kinship
-Version: 1.1.0-16
-Date: 2007-4-27
+Version: 1.1.0-17
+Date: 2007-6-13
 Title: mixed-effects Cox models, sparse matrices, and modeling data from large pedigrees
 Author: Beth Atkinson (atkinson@mayo.edu) for pedigree
         functions. Terry Therneau (therneau@mayo.edu) for all other functions.
@@ -27,4 +27,4 @@ License: Copyright 2003 Mayo Foundation for Medical Education and
         For other licensing arrangements, please contact Terry
         Therneau, Ph.D. Division of Biostatistics Mayo Clinic
         200 First St., SW Rochester, MN 55905 email: therneau@mayo.edu
-Packaged: Fri Apr 27 18:16:33 2007; jhz22
+Packaged: Wed Jun 13 11:45:50 2007; jhz22
