@@ -5,6 +5,9 @@ export ("align.pedigree",
        "alignped2",
        "alignped3",
        "alignped4",
+       "as.matrix.bdsmatrix",
+       "as.matrix.gchol",
+       "as.matrix.gchol.bdsmatrix",
        "autohint",
        "bdsBlock",
        "bdsI",
@@ -21,6 +24,12 @@ export ("align.pedigree",
        "getCovariateFormula2",
        "getCrossedTerms",
        "getGroupsFormula2",
+       "is.bdsmatrix",
+       "is.gchol.bdsmatrix",
+       "is.list.bdsmatrix",
+       "is.list.gchol.bdsmatrix",
+       "is.matrix.bdsmatrix",
+       "is.matrix.gchol.bdsmatrix",
        "kindepth",
        "kinship",
        "lmekin",
@@ -28,6 +37,11 @@ export ("align.pedigree",
        "makekinship",
        "pedigree",
        "plot.pedigree",
+       "print.coxme",
+       "print.lmekin",
+       "solve.bdsmatrix",
+       "solve.gchol",
+       "solve.gchol.bdsmatrix",
        "strata2"
        )
 S3method(as.matrix,bdsmatrix)
